--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#Global_variables" class="nav-link">Global variables</a></li>
         <li><a href="#Constants" class="nav-link">Constants</a></li>
         <li><a href="#Data_types" class="nav-link">Data types</a></li>
-        <li><a href="#if...else statement" class="nav-link">if...else statement</a></li>
+        <li><a href="#if...else_statement" class="nav-link">if...else statement</a></li>
         <li><a href="#while_statement" class="nav-link">while statement</a></li>
         <li><a href="#Function_declarations" class="nav-link">Function declarations</a></li>
         <li><a href="#Reference" class="nav-link">Reference</a></li>
@@ -34,7 +34,7 @@
     <main id="main-doc">
 
       <section class="main-section" id="Introduction">
-        <header>Introduction</header>
+        <header><h2>Introduction</h2></header>
         <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
         <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:</p>
         <ul>
@@ -45,7 +45,7 @@
 
 
       <section class="main-section" id="What_you_should_already_know">
-        <header>What you should already know</header>
+        <header><h2>What you should already know</h2></header>
         <p>This guide assumes you have the following basic background:</p>
         <ul>
           <li>A general understanding of the Internet and the World Wide Web (WWW).</li>
@@ -58,7 +58,7 @@
 
 
       <section class="main-section" id="JavaScript_and_Java">
-        <header>JavaScript and Java</header>
+        <header><h2>JavaScript and Java</h2></header>
         <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
         <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values. JavaScript has a prototype-based object model instead of the more common class-based object model. The prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual objects. JavaScript also supports functions without any special declarative requirements. Functions can be properties of objects, executing as loosely typed methods.</p>
         <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
@@ -67,7 +67,7 @@
 
     
       <section class="main-section" id="Hello_world">
-        <header>Hello world</header>
+        <header><h2>Hello world</h2></header>
         <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:</p>
         <code>"function greetMe(yourName) { alert("Hello " + yourName); } greetMe("World"); "</code>
         <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
@@ -75,7 +75,7 @@
 
 
       <section class="main-section" id="Variables">
-        <header>Variables</header>
+        <header><h2>Variables</h2></header>
         <p>You use variables as symbolic names for values in your application. The names of variables, called identifiers, conform to certain rules.</p>
         <p>A JavaScript identifier must start with a letter, underscore (_), or dollar sign ($); subsequent characters can also be digits (0-9). Because JavaScript is case sensitive, letters include the characters "A" through "Z" (uppercase) and the characters "a" through "z" (lowercase).</p>
         <p>You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.</p>
@@ -83,7 +83,7 @@
 
 
       <section class="main-section" id="Declaring_variables">
-        <header>Declaring variables</header>
+        <header><h2>Declaring variables</h2></header>
         <p>You can declare a variable in three ways: <br>With the keyword var. For example, </p>
         
         <code>var x = 42.</code>
@@ -102,7 +102,7 @@
 
 
       <section class="main-section" id="Variable_scope">
-        <header>Variable scope</header>
+        <header><h2>Variable scope</h2></header>
         <p>
           When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it is available only within that function. </p>
 
@@ -116,7 +116,7 @@ not defined</code>
 
 
       <section class="main-section" id="Global_variables">
-        <header>Global variables</header>
+        <header><h2>Global variables</h2></header>
         <p>Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax.</p>
 
         <p>Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber.</p>
@@ -124,7 +124,7 @@ not defined</code>
 
 
       <section class="main-section" id="Constants">
-        <header>Constants</header>
+        <header><h2>Constants</h2></header>
         <p>You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters.</p>
         <code>const PI = 3.14;</code>
         <p>A constant cannot change value through assignment or be re-declared while the script is running. It has to be initialized to a value.
@@ -148,7 +148,7 @@ WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;
 
 
       <section class="main-section" id="Data_types">
-        <header>Data types</header>
+        <header><h2>Data types</h2></header>
         <p>The latest ECMAScript standard defines seven data types:</p>
           <ul>
             <li>Six data types that are primitives:
@@ -172,8 +172,8 @@ WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;
         </section>
 
 
-      <section class="main-section" id="if...else statement">
-        <header>if...else statement</header>
+      <section class="main-section" id="if...else_statement">
+        <header><h2>if...else statement</h2></header>
         <p>Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
         <code>if (condition) { statement_1; } else { statement_2; }</code>
         <p>condition can be any expression that evaluates to true or false. See Boolean for an explanation of what evaluates to true and false. If condition evaluates to true, statement_1 is executed; otherwise, statement_2 is executed. statement_1 and statement_2 can be any statement, including further nested if statements.</p>
@@ -197,7 +197,7 @@ statement_4_runs_if_condition_is_false; }</code>
 
 
       <section class="main-section" id="while_statement">
-        <header>while statement</header>
+        <header><h2>while statement</h2></header>
         <p>A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows:</p>
         <code>while (condition) statement</code>
         <p>If the condition becomes false, statement within the loop stops executing and control passes to the statement following the loop.</p>
@@ -218,7 +218,7 @@ statement_4_runs_if_condition_is_false; }</code>
 
 
       <section class="main-section" id="Function_declarations">
-        <header>Function declarations</header>
+        <header><h2>Function declarations</h2></header>
         <p>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:</p>
         <ul>
           <li>The name of the function.</li>
@@ -235,7 +235,7 @@ statement_4_runs_if_condition_is_false; }</code>
 
 
       <section class="main-section" id="Reference">
-        <header>Reference</header>
+        <header><h2>Reference</h2></header>
        <ul>
          <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide">MDN</a></li>
          </ul>
