--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav id="navbar">
-      <header>JS Documentation</header>
+      <header class="nav-header">JS Documentation</header>
       <ul>
         <li><a href="#Introduction" class="nav-link">Introduction</a></li>
         <li>
